--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -18,16 +18,21 @@
                 <h3 class="reviews-subtitle">Тоня Кучеровская</h3>
                 <p class="reviews-slogan">Выпуск 2015-го года, Національний університет біоресурсів
                     і природокористування України</p>
-                <p class="reviews-excerpt">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім
+                <p class="reviews-excerpt">За короткий час занять з Оленою я опанувала граматику і поповнила свій
+                    зовсім
                     пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з
                     Оленою
-                    стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я
+                    стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом,
+                    проте я
                     не
-                    тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен
+                    тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я
+                    студен
                     ...
                     <a class="reviews-quote" href="">Читать дальше</a>
                 </p>
             </div>
+
+
             <a class="left-strelka" href="">
                 <svg class="reviews-svg" width="25" height="17">
                     <use href="./images/sprite.svg#arrow-1">
@@ -40,8 +45,8 @@
                     </use>
                 </svg>
             </a>
-        </div>
 
+        </div>
         <ul class="reviews-items">
             <li class="reviews-item">
                 <a class="reviews-right" href="">
