--- a/src/sass/layout/_feedbacks.scss
+++ b/src/sass/layout/_feedbacks.scss
@@ -1,16 +1,18 @@
 .reviews {
-    max-width: 320px;
-  
     margin: 0 auto;
     padding-top: 50px;
     padding-bottom: 50px;
 
     @media screen and (min-width: 768px) {
-      max-width: 768px;
-
       padding-top: 50px;
       padding-bottom: 50px;
    }
+
+   @media screen and (min-width: 1344px) {
+      padding-top: 130px;
+      padding-bottom: 130px;
+  }
+ 
   
     & .reviews-title {
       text-align: center;
@@ -23,7 +25,12 @@
       @media screen and (min-width: 768px) {
         font-size: 26px;
      }
+
+     @media screen and (min-width: 1344px) {
+        font-size: 46px;
+        line-height: 130%;
     }
+  }
 }
   
   .reviews-text {
@@ -46,6 +53,15 @@
 
       position: relative;
    }
+
+   @media screen and (min-width: 1344px) {
+    max-width: 1090px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    padding: 50px 112px 51px 82px;
+  }
   
     & .reviews-image {
       width: 90px;
@@ -88,13 +104,16 @@
           font-size: 20px;
           line-height: 1.2;
       }
+
+        @media screen and (min-width: 1344px) {
+          font-size: 30px;
+          line-height: 1.233;
+      }
     }
 
     & .reviews-slogan {
       max-width: 240px;
   
-      margin-left: auto;
-      margin-right: auto;
       margin-top: 10px;
   
       font-weight: 500;
@@ -106,6 +125,11 @@
   
       color: var(--grey-color);
 
+      @media screen and (max-width: 767px) {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
       @media screen and (min-width: 768px) {
         max-width: 412px;
 
@@ -113,13 +137,20 @@
 
         text-align: start;
       }
+
+      @media screen and (min-width: 1344px) {
+        max-width: 438px;
+
+        margin-top: 10px;
+        
+        font-size: 14px;
+        line-height: 1.214;
+      }
     }
 
     & .reviews-excerpt {
       max-width: 240px;
   
-      margin-left: auto;
-      margin-right: auto;
       margin-top: 10px;
   
       font-weight: 500;
@@ -136,6 +167,11 @@
         color: var(--orange-color);
       }
 
+      @media screen and (max-width: 767px) {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
       @media screen and (min-width: 768px) {
         max-width: 412px;
 
@@ -143,11 +179,22 @@
 
         text-align: start;
       }
+
+      @media screen and (min-width: 1344px) {
+        max-width: 706px;
+
+        font-size: 18px;
+        line-height: 1.555;
+      }
     }
 
     & .reviews-list {
       @media screen and (min-width: 768px) {
         margin-right: 46px;
+      }
+
+      @media screen and (min-width: 1344px) {
+          margin-right: 40px;
       }
     }
   }
@@ -162,6 +209,10 @@
       top: 40%;
       left: -2%;
     }
+
+    @media screen and (min-width: 1344px) {
+      left: -7%;
+    }
   }
 
   .right-strelka {
@@ -172,6 +223,10 @@
       position: absolute;
       top: 40%;
       left: 98%;
+    }
+
+    @media screen and (min-width: 1344px) {
+      left: 104%;
     }
   }
     
@@ -184,6 +239,10 @@
       margin-top: 30px;
 
       justify-content: center;
+    }
+
+    @media screen and (min-width: 1344px) {
+      margin-top: 40px;
     }
 
     & .reviews-item {
