Исправляет ошибки после слияния

--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -2,6 +2,7 @@
   background-color: #111518;
   padding-top: 50px;
   height: 545px;
+  position: relative;
 
   &-title {
     // padding-left: 10px;
@@ -18,24 +19,24 @@
   }
 }
 
-.benefits-list {
+.benefits-list-wrapper {
   position: absolute;
   width: 280px;
-  // padding: 0;
-  // margin-left: 10px;
-  // margin-right: 10px;
   padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 30px;
   padding-right: 22px;
+  background: #ffffff;
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+
+.benefits-list {
   counter-reset: number 0;
   font-family: $main-font;
   list-style-type: none;
-  background: #ffffff;
-  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+
   &__item {
     counter-increment: number;
-    margin-bottom: 10px;
     font-family: $main-font;
     font-weight: 700;
     font-size: 14px;
@@ -50,7 +51,7 @@
       // width: 20px;
       // height: 2px;
       // background-color: #ff6b09;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
       color: #ff6b09;
       font-weight: 700;
       font-size: 14px;
@@ -58,13 +59,16 @@
       letter-spacing: 0.08em;
       content: '— ' counter(number, decimal-leading-zero);
     }
-    &__item:not(:last-child) {
-      margin-bottom: 10px;
+    &:not(:last-child) {
+      @media screen and (max-width: $tablet - 1) {
+        margin-bottom: 18px;
+      }
     }
   }
 }
 @media screen and (min-width: 768px) {
   .benefits-list__item::before {
+    margin-bottom: 10px;
     font-size: 14px;
     line-height: 1.214;
   }
@@ -77,28 +81,28 @@
     line-height: 1.307;
     margin-bottom: 25px;
   }
+
+  .benefits-list-wrapper {
+    width: 688px;
+    padding-top: 30px;
+    padding-left: 96px;
+    padding-right: 109px;
+    padding-bottom: 26px;
+  }
+
   .benefits-list {
     display: flex;
     flex-wrap: wrap;
     margin-right: -24px;
     margin-bottom: -24px;
-    // column-count: 2;
-    width: 688px;
 
-    padding-bottom: 26px;
-    padding-top: 30px;
-    padding-left: 73px;
-    padding-right: 47px;
     &__item {
-      flex-basis: calc(100% / 2 - 24px);
+      flex-basis: calc((100% - 2 * 24px) / 2);
       margin-right: 24px;
       margin-bottom: 24px;
       display: block;
 
       line-height: 1.428;
-      // &:nth-child(1) {
-      //   margin-bottom: 24px;
-      // }
     }
   }
 }
@@ -107,37 +111,36 @@
   .benefits {
     height: 560px;
     padding-top: 100px;
-    // overflow-y: hidden;
   }
-  .benefits .container {
-    position: relative;
-  }
-  .benefits .container::after {
+  .benefits::after {
     content: '';
-    // overflow: hidden;
     display: block;
     position: absolute;
-    bottom: -431px;
-    right: -197px;
-    z-index: 1;
-    width: 452px;
-    height: 620px;
+    bottom: 0;
+    right: 0;
+    width: 455px;
+    height: 472px;
     background-image: url('./../images/bg-discription.png');
     background-repeat: no-repeat;
+    background-size: cover;
   }
-  .benefits-list {
-    z-index: 2;
+  .benefits-list-wrapper {
     width: 1314px;
     padding-bottom: 60px;
     padding-top: 70px;
     padding-left: 114px;
     padding-right: 112px;
-    margin-right: -40px;
-    margin-bottom: -40px;
+    z-index: 1;
+  }
+
+  .benefits-list {
+    margin-right: -32px;
+    margin-bottom: -32px;
+
     &__item {
-      flex-basis: calc(100% / 3 - 40px);
-      margin-right: 40px;
-      margin-bottom: 40px;
+      flex-basis: calc((100% - 3 * 40px) / 3);
+      margin-right: 32px;
+      margin-bottom: 32px;
 
       font-size: 20px;
       line-height: 1.4;
@@ -152,8 +155,4 @@
     line-height: 1.304;
     margin-bottom: 70px;
   }
-}
-
-.test {
-  margin-top: 200px;
 }
