--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,9 +1,8 @@
 .description {
-  margin-top: 150px;
-  margin-bottom: 50px;
+  padding-top: 198px;
+  padding-bottom: 50px;
   &-title {
     margin-bottom: 30px;
-    padding-top: 50px;
     font-weight: 800;
     font-size: 20px;
     line-height: 1.3;
@@ -132,6 +131,11 @@
   }
 }
 @media screen and (min-width: 1344px) {
+  .description {
+    padding-top: 280px;
+    padding-bottom: 130px;
+  }
+
   .description-list__item {
     flex-basis: calc(100% / 3 - 20px);
   }
@@ -148,8 +152,5 @@
   .description-list__description {
     font-size: 18px;
     line-height: 1.556;
-  }
-  .description {
-    margin-bottom: 130px;
   }
 }
