--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -5,20 +5,22 @@
       на English ВНО, которые <br />
       мы <span class="benefits-title__accent">помогаем</span> решить
     </h2>
-    <ul class="benefits-list">
-      <li class="benefits-list__item">Название грамматики</li>
-      <li class="benefits-list__item">
-        Неумение вомпринимать устную английскую речь
-      </li>
-      <li class="benefits-list__item">
-        Скупой словарный запас для написани сочинения
-      </li>
-      <li class="benefits-list__item">
-        Поодготовка в <br />
-        одиночку
-      </li>
-      <li class="benefits-list__item">Отсутствие единого ресурса знаний</li>
-      <li class="benefits-list__item">Недостатой самоорганизации и лень</li>
-    </ul>
+    <div class="benefits-list-wrapper">
+      <ul class="benefits-list">
+        <li class="benefits-list__item">Название грамматики</li>
+        <li class="benefits-list__item">
+          Неумение вомпринимать устную английскую речь
+        </li>
+        <li class="benefits-list__item">
+          Скупой словарный запас для написани сочинения
+        </li>
+        <li class="benefits-list__item">
+          Поодготовка в <br />
+          одиночку
+        </li>
+        <li class="benefits-list__item">Отсутствие единого ресурса знаний</li>
+        <li class="benefits-list__item">Недостатой самоорганизации и лень</li>
+      </ul>
+    </div>
   </div>
 </section>
