--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,10 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './layout/header';
+@import './layout/hero';
+@import './layout/products';
+@import './layout/description';
+@import './layout/review';
+@import './layout/locations';
+@import './layout/footer';
