product item title+svg...

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,6 +1,6 @@
-.products-container{
-    width: 100%;
-    background: #E5E5E5;
+.products-container {
+  width: 100%;
+  background: #e5e5e5;
 }
 .advantages {
   display: inline-block;
@@ -10,17 +10,17 @@
   line-height: 1.45;
   text-align: center;
   text-transform: uppercase;
-  color: #FFA5BA;
+  color: #ffa5ba;
   margin-top: 127px;
   width: 100%;
-  @media screen and (min-width:768px) and (max-width:1199px){
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-size: 26px;
-  line-height: 1.12;
-  } 
-  @media screen and (min-width:1200px){
+    line-height: 1.12;
+  }
+  @media screen and (min-width: 1200px) {
     font-size: 30px;
-  line-height: 1.16;
-  letter-spacing: 0.04em;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
   }
 }
 
@@ -32,17 +32,17 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #D41443;
+  color: #d41443;
   margin: 0;
   margin-top: 15px;
-  @media screen and (min-width:768px) and (max-width:1199px){
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-size: 48px;
-  line-height: 1.14;
-  } 
-  @media screen and (min-width:1200px){
+    line-height: 1.14;
+  }
+  @media screen and (min-width: 1200px) {
     font-size: 58px;
     line-height: 1.16;
-  letter-spacing: 0.06em;
+    letter-spacing: 0.06em;
   }
 }
 .products {
@@ -51,20 +51,21 @@
   margin: 0;
   width: 100%;
   padding-bottom: 98px;
-  @media screen and (max-width:767px){
-      padding-bottom: 112px;
+  @media screen and (max-width: 767px) {
+    padding-bottom: 112px;
   }
-  @media screen and (min-width:768px){
+  @media screen and (min-width: 768px) {
     display: flex;
-    }
+  }
 }
 .products-item {
+  position: relative;
   list-style: none;
   padding: 0;
   margin: 0;
   width: 100%;
   border-radius: 24px;
-  margin-top: 31px;
+  margin-top: 144px;
   @media screen and (max-width: 767px) {
     max-width: 280px;
     margin-left: auto;
@@ -74,28 +75,59 @@
     width: calc((100% - 60px) / 3);
     max-width: 220px;
     margin-right: 20px;
-    &:not(:last-child){
-        margin-right: 0px;
+    margin-top: 150px;
+    &:not(:last-child) {
+      margin-right: 20px;
     }
   }
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 3);
     max-width: 329px;
-    &:not(:last-child){
-        margin-right: 30px;
+    margin-top: 254px;
+    &:not(:last-child) {
+      margin-right: 30px;
     }
   }
-  &:nth-child(1){
-      background:  #FFB8CA;
+  .ice-cream {
+    background: #ffb8ca;
+    border-radius: 4px;
   }
-  &:nth-child(2){
-    background:  #F0D1A5;
-    }
-  &:nth-child(3){
-    background:  #C2E297;
-   }
-   &:not(:first-child){
-       margin-top: 17px;
-   }
-
+  .ice-coffee {
+    background: #f0d1a5;
+    border-radius: 4px;
+  }
+  .milkshakes {
+    background: #c2e297;
+    border-radius: 4px;
+  }
+}
+img{
+  position: absolute;
+  top: -50%;
+  padding-top: 31px;
+}
+.product-item-title{
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding-top: 162px;
+  width: 100%;
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
+}
+.svg-item{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  margin-top: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-top: 32px;
+  }
 }
