--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,12 +9,24 @@
         <li class="footer-social">
           <a href="">
             <svg class="footer-icon">
-              <use href=""></use>
+              <use href="./footer/symbol-defs.svg#icon-github"></use>
             </svg>
           </a>
         </li>
-        <li></li>
-        <li></li>
+        <li class="footer-social">
+          <a href="">
+            <svg class="footer-icon">
+              <use href="./footer/symbol-defs.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-social">
+          <a href="">
+            <svg class="footer-icon">
+              <use href="./footer/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
       <p>
         Feel free to contact
