--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,21 +9,21 @@
         <li class="footer-social">
           <a href="">
             <svg class="footer-icon">
-              <use href="./footer/symbol-defs.svg#icon-github"></use>
+              <use href="../images/footer/symbol-defs.svg#icon-github"></use>
             </svg>
           </a>
         </li>
         <li class="footer-social">
           <a href="">
             <svg class="footer-icon">
-              <use href="./footer/symbol-defs.svg#icon-telegram"></use>
+              <use href="../images/footer/symbol-defs.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-social">
           <a href="">
             <svg class="footer-icon">
-              <use href="./footer/symbol-defs.svg#icon-facebook"></use>
+              <use href="../images/footer/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
