--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 
 @import './layout/header';
 @import './layout/hero';
+@import './layout/problems';
 @import './layout/advantages';
 @import './layout/approach';
 @import './layout/program';
