добавляет стили на desktop

--- a/src/partials/doings.html
+++ b/src/partials/doings.html
@@ -1,4 +1,5 @@
 <section class="doings container">
+    <div class="section">
 <h2 class="doings-title">Как мы это делаем</h2>
 <ul class="doings-list">
     <li class="doings-item">
@@ -74,4 +75,5 @@
         </p>
     </li>
 </ul>
+</div>
 </section>
