--- a/src/sass/_doings.scss
+++ b/src/sass/_doings.scss
@@ -1,5 +1,6 @@
 .doings{
-    padding: 0 20px;
+    padding-right: 20px;
+    padding-left: 20px;
     text-align: center;
     }
     
@@ -117,3 +118,57 @@
                 padding: 0 22px;
             }
     }
+
+    @media screen and(min-width:1200px){
+
+        .doings-title{
+          text-align: start;
+          padding-bottom: 50px;
+          margin-left: 40px;
+          @include font (800, 46px, 1.3, 0.03em);
+          }
+  
+          .doings-list{
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: center;
+          }
+  
+          .doings-item{
+              width: calc(100% / 3 - 40px);
+              margin-bottom: 20px;
+              max-width: 425px;
+              margin-right: 20px;
+              height: 396px;
+          }
+  
+          .doings-item:nth-child(3n){
+              margin-right: 0;
+          }
+  
+          .doings-item:nth-last-child(-n + 3){
+              margin-bottom: 0;
+          }
+  
+          .doings-svg{
+              margin-top: 40px;
+              margin-bottom: 30px;
+          } 
+  
+          .doings-list-title{
+              padding: 0 6px 32px;
+              @include font (700, 20px, 1.4, 0.08em);
+          }
+  
+          .doings-description{
+              @include font (500, 18px, 1.555, 0.08em);
+              padding: 0 7px 55px;
+          }
+  
+          .doings-list-title::after{
+              display: block;
+              bottom: 16px;
+              left: 50%;
+              transform: translate(-50%);
+          }
+      }
