--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -145,14 +145,15 @@ body {
     height: 545px;
     padding-top: 50px;
     background-color: var(--dark-bg-color);
-    margin-bottom: 198px;
+    margin-bottom: 148px;
   }
   .problems__title {
+    max-width: 225px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
-    line-height: 136%;
+    line-height: 1.36;
     letter-spacing: 0.03em;
     color: var(--white-color);
   }
