--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,21 +1,21 @@
 <section class="section-form">
     <div class="container">
         <form action="#" class="registration-form">
-            <b class="registration-form__header">
+            <p class="registration-form__header">
                 Регистрация на <span class="text__accent">бесплатную</span> телефонную <span
                     class="text__accent">консультацию</span> по
                 нюансам ЗНО
                 по английскому языку
-            </b>
+            </p>
             <p class="registration-form__description">
                 Оставь заявку на участие в <span class="text__accent">бесплатном занятии.</span> <br>
-                С вами свяжется консультант и ответит на вопросы.
+                С вами свяжется консультант и ответит на вопросы
             </p>
             <label class="registration-form__field">
-                <input type="text" name="user-name" class="registration-form__input" placeholder="Имя*">
+                <input type="text" name="name" class="registration-form__input" placeholder="Имя*">
             </label>
             <label class="registration-form__field">
-                <input type=" tel" name="user-tel" class="registration-form__input" placeholder="Телефон*">
+                <input type="tel" name="tel" class="registration-form__input" placeholder="Телефон*">
             </label>
             <button type="submit" class="registration-form__btn">хочу на бесплатное занятие</button>
         </form>
