--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -1,23 +1,24 @@
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
-  screen and (min-resolution: 192dpi) and (min-width: 320px),
-  screen and (min-resolution: 2dppx) and (min-width: 320px) {
-  .section-form {
-    background: url('../images/form_img/bg_img_tablet@2x-min.png') $text-dark;
-  }
-}
 .section-form {
-  max-width: 1680px;
-  min-width: 320px;
-  min-height: 507px;
+  // max-width: 1680px;
+  // min-width: 320px;
+  // min-height: 507px;
   margin: 0 auto;
   font-family: Montserrat;
   font-style: normal;
   text-align: center;
   color: $white;
-  background: url('../images/form_img/bg_img_tablet-min.png') $text-dark;
+  background-color: $text-dark;
+  background-image: url('../images/form_img/bg_img_tablet-min.png');
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: 82% 50%;
   padding: 50px 0;
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+    screen and (min-resolution: 192dpi) and (min-width: 320px),
+    screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    background-image: url('../images/form_img/bg_img_tablet@2x-min.png');
+  }
 }
 
 .registration-form {
@@ -52,14 +53,13 @@
   text-transform: uppercase;
   text-align: center;
   background-color: $accent-color;
+  border: 2px solid $accent-color;
 
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     background-color: transparent;
     color: $accent-color;
-    border: 2px solid $accent-color;
-    transform: scale(1.15);
   }
 }
 
@@ -73,6 +73,8 @@
   @include font(600, 14px, 1.214, 0.08em);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  outline: none;
+
   &::placeholder {
     @include font(600, 14px, 1.214, 0.08em);
     color: $white;
@@ -85,7 +87,7 @@
 
   &:hover,
   &:focus {
-    border: 2px solid $accent-color;
+    border: 1px solid $accent-color;
   }
 }
 
@@ -112,29 +114,38 @@
   }
 }
 
-@media screen and (max-width: 1343px) and (min-width: 769px) {
+@media screen and (max-width: $desktop - 1) and (min-width: $tablet) {
   .section-form {
-    background-size: cover;
+    padding: 50px 0 70px 0;
   }
-}
+  .registration-form__header {
+    @include font(800, 26px, 1.3, 0.03em);
+  }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
-  screen and (min-resolution: 192dpi) and (min-width: 1344px),
-  screen and (min-resolution: 2dppx) and (min-width: 1344px) {
-  .section-form {
-    background: url('../images/form_img/bg_img_desktop@2x-min.png') $text-dark;
+  .registration-form__description {
+    @include font(600, 14px, 1.21, 0.08em);
+    margin-bottom: 40px;
   }
 }
 
 @media screen and (min-width: $desktop) {
   .section-form {
-    background: url('../images/form_img/bg_img_desktop-min.png') $text-dark
-      no-repeat center;
+    padding: 100px 0 62px 0;
+    background-color: $text-dark;
+    background-image: url('../images/form_img/bg_img_desktop-min.png');
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: $desktop),
+      screen and (min-resolution: 192dpi) and (min-width: $desktop),
+      screen and (min-resolution: 2dppx) and (min-width: $desktop) {
+      background-image: url('../images/form_img/bg_img_desktop@2x-min.png');
+    }
   }
 
   .registration-form__header {
     width: 1090px;
-    @include font(800, 46px, 1.304, 0.03em);
+    @include font(800, 46px, 1.3, 0.03em);
     margin-bottom: 50px;
   }
 
