desktop готов (кроме картинки)

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -9,39 +9,17 @@
         <h3 class="our-program__item-term">семестр</h3>
         <ul class="list our-program__sublist">
           <li class="our-program__subitem">
-            <p class="our-program__item-title">Grammar</p>
+            <p class="our-program__subitem-title">Grammar</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Nouns & Articles</li>
-              <li class="our-program__item-subtitle">Adjectives & Adverb</li>
+              <li class="our-program__subitem-subtitle">Nouns & Articles</li>
+              <li class="our-program__subitem-subtitle">Adjectives & Adverb</li>
             </ul>
           </li>
           <li class="our-program__subitem">
-            <p class="our-program__item-title">Vocabulary</p>
+            <p class="our-program__subitem-title">Vocabulary</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Family & Relations</li>
-              <li class="our-program__item-subtitle">People & Society</li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-
-      <li class="our-program__item">
-        <h3 class="our-program__item-term">семестр</h3>
-        <ul class="list our-program__sublist">
-          <li class="our-program__subitem">
-            <p class="our-program__item-title">Grammar</p>
-            <ul class="list">
-              <li class="our-program__item-subtitle">Pronouns</li>
-              <li class="our-program__item-subtitle">Active Voice</li>
-              <li class="our-program__item-subtitle">Passive Voice</li>
-            </ul>
-          </li>
-          <li class="our-program__subitem">
-            <p class="our-program__item-title">Vocabulary</p>
-            <ul class="list">
-              <li class="our-program__item-subtitle">Home</li>
-              <li class="our-program__item-subtitle">School</li>
-              <li class="our-program__item-subtitle">Work</li>
+              <li class="our-program__subitem-subtitle">Family & Relations</li>
+              <li class="our-program__subitem-subtitle">People & Society</li>
             </ul>
           </li>
         </ul>
@@ -51,26 +29,48 @@
         <h3 class="our-program__item-term">семестр</h3>
         <ul class="list our-program__sublist">
           <li class="our-program__subitem">
-            <p class="our-program__item-title">Grammar</p>
+            <p class="our-program__subitem-title">Grammar</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Modal verbs</li>
-              <li class="our-program__item-subtitle">Infinitive</li>
-              <li class="our-program__item-subtitle">Gerund</li>
-              <li class="our-program__item-subtitle">Participle: 1, 2</li>
+              <li class="our-program__subitem-subtitle">Pronouns</li>
+              <li class="our-program__subitem-subtitle">Active Voice</li>
+              <li class="our-program__subitem-subtitle">Passive Voice</li>
             </ul>
           </li>
           <li class="our-program__subitem">
-            <p class="our-program__item-title">Vocabulary</p>
+            <p class="our-program__subitem-title">Vocabulary</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Travel & Tourism</li>
-              <li class="our-program__item-subtitle">Culture & Free Time</li>
-              <li class="our-program__item-subtitle">Sport</li>
+              <li class="our-program__subitem-subtitle">Home</li>
+              <li class="our-program__subitem-subtitle">School</li>
+              <li class="our-program__subitem-subtitle">Work</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+
+      <li class="our-program__item">
+        <h3 class="our-program__item-term">семестр</h3>
+        <ul class="list our-program__sublist">
+          <li class="our-program__subitem">
+            <p class="our-program__subitem-title">Grammar</p>
+            <ul class="list">
+              <li class="our-program__subitem-subtitle">Modal verbs</li>
+              <li class="our-program__subitem-subtitle">Infinitive</li>
+              <li class="our-program__subitem-subtitle">Gerund</li>
+              <li class="our-program__subitem-subtitle">Participle: 1, 2</li>
+            </ul>
+          </li>
+          <li class="our-program__subitem">
+            <p class="our-program__subitem-title">Vocabulary</p>
+            <ul class="list">
+              <li class="our-program__subitem-subtitle">Travel & Tourism</li>
+              <li class="our-program__subitem-subtitle">Culture & Free Time</li>
+              <li class="our-program__subitem-subtitle">Sport</li>
             </ul>
           </li>
           <li>
-            <p class="our-program__item-title">Writing</p>
+            <p class="our-program__subitem-title">Writing</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Informal Letter</li>
+              <li class="our-program__subitem-subtitle">Informal Letter</li>
             </ul>
           </li>
         </ul>
@@ -80,31 +80,33 @@
         <h3 class="our-program__item-term">семестр</h3>
         <ul class="list our-program__sublist">
           <li class="our-program__subitem">
-            <p class="our-program__item-title">Grammar</p>
+            <p class="our-program__subitem-title">Grammar</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">
+              <li class="our-program__subitem-subtitle">
                 Clauses: Conditional and Wishes
               </li>
-              <li class="our-program__item-subtitle">
+              <li class="our-program__subitem-subtitle">
                 Direct / Reported speech
               </li>
-              <li class="our-program__item-subtitle">Preposition</li>
-              <li class="our-program__item-subtitle">Conjunction</li>
-              <li class="our-program__item-subtitle">Numeral</li>
+              <li class="our-program__subitem-subtitle">Preposition</li>
+              <li class="our-program__subitem-subtitle">Conjunction</li>
+              <li class="our-program__subitem-subtitle">Numeral</li>
             </ul>
           </li>
           <li class="our-program__subitem">
-            <p class="our-program__item-title">Vocabulary</p>
+            <p class="our-program__subitem-title">Vocabulary</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Healthy Living</li>
-              <li class="our-program__item-subtitle">Nature & Environment</li>
-              <li class="our-program__item-subtitle">Money</li>
+              <li class="our-program__subitem-subtitle">Healthy Living</li>
+              <li class="our-program__subitem-subtitle">
+                Nature & Environment
+              </li>
+              <li class="our-program__subitem-subtitle">Money</li>
             </ul>
           </li>
           <li>
-            <p class="our-program__item-title">Writing</p>
+            <p class="our-program__subitem-title">Writing</p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Formal Letter</li>
+              <li class="our-program__subitem-subtitle">Formal Letter</li>
             </ul>
           </li>
         </ul>
@@ -114,10 +116,10 @@
         <h3 class="our-program__item-term">семестр</h3>
         <ul class="list our-program__sublist">
           <li class="our-program__subitem">
-            <p class="our-program__item-title"></p>
+            <p class="our-program__subitem-title"></p>
             <ul class="list">
-              <li class="our-program__item-subtitle">Revision</li>
-              <li class="our-program__item-subtitle">Tests</li>
+              <li class="our-program__subitem-subtitle">Revision</li>
+              <li class="our-program__subitem-subtitle">Tests</li>
             </ul>
           </li>
         </ul>
