--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,5 +1,6 @@
 <!-- Футер -->
 <footer>
+    <h2 class="visually-hidden">Форма регистрации</h2>
     <div class="footer-imeg container">
         <p class="footer-text">
             Регистрация на <span class="spans">бесплатную</span> телефонную <span class="spans">консультацию</span> по
