--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -31,8 +31,34 @@
           background-size: contain;
         }
       }
+
+      @media screen and (min-width: 1344px) {
+        max-width: 1680px;
+        height: 840px;
+
+        padding-top: 100px;
+        padding-bottom: 62px;
+
+        background-color: var(--main-color);
+        background-image: url(../images/feedbacksfooter/pc/background@1x.png);
+      
+  
+        @media screen and (min-device-pixel-ratio: 2),
+          screen and (min-resolution: 192dpi),
+          screen and (min-resolution: 2dppx) {
+          background-color: var(--main-color);
+          background-image: url(../images/feedbacksfooter/pc/background@2x.png);
+          background-size: contain;
+    
+        }
+      }
   
     & .footer-text {
+      max-width: 280px;
+
+      margin-left: auto;
+      margin-right: auto;
+
       font-weight: 800;
       font-size: 14px;
       line-height: 136%;
@@ -44,7 +70,16 @@
       color: var(--white-color);
 
       @media screen and (min-width: 768px) {
+        max-width: 688px;
+
         font-size: 26px;
+        line-height: 130%;
+      }
+
+      @media screen and (min-width: 1344px) {
+        max-width: 1090px;
+
+        font-size: 46px;
         line-height: 130%;
       }
   
@@ -54,6 +89,10 @@
     }
   
     & .footer-quote {
+      max-width: 280px;
+
+      margin-left: auto;
+      margin-right: auto;
       margin-top: 30px;
   
       font-weight: 600;
@@ -66,8 +105,19 @@
       color: var(--white-color);
 
       @media screen and (min-width: 768px) {
+        max-width: 452px;
+
         font-size: 14px;
         line-height: 1.214;
+      }
+
+      @media screen and (min-width: 1344px) {
+        max-width: 1090px;
+
+        margin-top: 50px;
+
+        font-size: 30px;
+        line-height: 1.233;
       }
   
       & .spans {
@@ -83,6 +133,10 @@
       @media screen and (min-width: 768px) {
         margin-top: 40px;
       }
+
+      @media screen and (min-width: 1344px) {
+        margin-top: 56px;
+      }
   
       & .footer-name {
         width: 100%;
@@ -96,10 +150,24 @@
         @media screen and (min-width: 768px) {
           max-width: 390px;
         }
+
+        @media screen and (min-width: 1344px) {
+          max-width: 478px;
+
+          margin-left: auto;
+          margin-right: auto;
+          padding: 23px 40px;
+
+          display: block;
+        }
       }
   
       & .footer-top {
         margin-top: 20px;
+
+        @media screen and (min-width: 1344px) {
+          margin-top: 30px;
+        }
       }
   
       & .footer-name::placeholder {
@@ -109,13 +177,24 @@
         letter-spacing: 0.08em;
   
         color: var(--white-color);
+
+        @media screen and (min-width: 1344px) {
+          font-size: 20px;
+          line-height: 1.2;
+        }
       }
     }
   
     & .footer-button {
-      padding: 14px 1px;
+      padding: 14px 10px;
   
       margin-top: 50px;
+
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 1.25;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
   
       background-color: var(--orange-color);
       color: var(--white-color);
@@ -126,6 +205,15 @@
         margin-top: 31px;
         margin-left: auto;
         margin-right: auto;
+      }
+
+      @media screen and (min-width: 1344px) {
+        margin-top: 80px;
+        padding: 26px;
+
+        font-size: 14px;
+        line-height: 1.214;
+        letter-spacing: 0.14em;
       }
     }
 }
@@ -141,7 +229,11 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+    }
 
+    @media screen and (min-width: 1344px) {
+      padding-top: 55px;
+      padding-bottom: 55px;
     }
 
     & .footer-logo {
@@ -166,13 +258,16 @@
   
   .footer-tell {
     margin-top: 21px;
-    text-align: center;
 
     @media screen and (min-width: 768px) {
       margin-top: 0;
 
       display: flex;
-      align-items: center;
+    }
+
+    @media screen and (min-width: 1344px) {
+      margin-left: 291px;
+      margin-right: auto;
     }
   
     & .footer-tel {
@@ -189,8 +284,28 @@
 
       color: var(--main-color);
 
+      @media screen and (min-width: 768px) {
+        font-size: 20px;
+        line-height: 1.2;
+      }
+
+      @media screen and (min-width: 1344px) {
+        font-size: 30px;
+        line-height: 1.233;
+      }
+
       & .footer-svg {
         margin-right: 10px;
+
+        @media screen and (min-width: 768px) {
+          width: 24px;
+          height: 23px;
+        }
+
+        @media screen and (min-width: 1344px) {
+          width: 30px;
+          height: 28.82px;
+        }
       }
     }
   
@@ -221,6 +336,10 @@
 
       margin-right: 24px;
       margin-left: 24px;
+    }
+
+    @media screen and (min-width: 1344px) {
+      margin-left: 16px;
     }
   }
 
