--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -21,15 +21,15 @@
     <h2 class="teacher_name">Елена Морева</h2>
     <ul class="teacher_list">
         <li class="teacher_skills">
-           <img class="teacher_svg" src="./images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
+           <img class="teacher_svg" src="./images/images-teacher/checked.svg" alt="checked">
             Опыт подготовки учеников к ВНО - 6 лет  
         </li>
         <li class="teacher_skills">
-            <img class="teacher_svg" src="./images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
+            <img class="teacher_svg" src="./images/images-teacher/checked.svg" alt="checked">
             Собственный результат сдачи ВНО - 197 баллов 2 года подряд
         </li>
         <li class="teacher_skills">
-            <img class="teacher_svg" src="./images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
+            <img class="teacher_svg" src="./images/images-teacher/checked.svg" alt="checked">
             Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
         </li>
     </ul>
