--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -12,7 +12,14 @@ list-style: none;
 }
 
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .teacher_area {
+  display: flex;
+  flex-direction: column;
+    justify-content: center;
+    width: 279px;
+    margin: 0 auto;
+  }
   .teacher_title {
     font-family: Montserrat;
     font-weight: 800;
@@ -33,7 +40,7 @@ list-style: none;
   color: #111518;
   margin-top: 21px;
   padding-bottom: 10px;
-  border-bottom: 1px solid #B9B9B9;;
+  border-bottom: 1px solid #B9B9B9;
  }
  .teacher_list {
    margin-top: 20px;
@@ -47,8 +54,11 @@ list-style: none;
   letter-spacing: 0.06em;
   color: #111518;
   margin-bottom: 24px;
+
  }
  .teacher_svg {
+  width: 18px;
+  height: 14px; 
  margin-right: 9px;  
  }
 
@@ -70,19 +80,48 @@ list-style: none;
    color: #B9B9B9;
  }
  .teacher_certificate {
+   display: flex;
   font-family: Montserrat;
   font-weight: 500;
   font-size: 12px;
   line-height: 20px;
   text-decoration-line: underline;
   color: #FF6B09;
-  padding-top: 10px;
-  padding-bottom: 50px;
+  margin-top: 10px;
+  margin-bottom: 50px;
  }
 }
 @media screen and (min-width: 768px) {
+  .teacher_before_line::before {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 25px;
+    height: 2px;
+    background-color:#FF6B09;
+   }
+   .teacher_svg {
+    margin-right: 9px;  
+    width: 18px;
+    height: 14px; 
+    }
+  .teacher_skills {
+    display: flex;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.06em;
+    color: #111518;    
+   margin-top: 25px;
+  }
+  .teacher_skills:last-child {
+    margin-bottom: 20px;
+  }
 .teacher_area {
  display: flex;
+ width: 688px;
+ margin: auto;
 }
 .teacher_right_side {
  flex-direction: column;
@@ -101,13 +140,47 @@ margin-top: 50px;
 margin-bottom: 30px;
 }
 .teacher_name {
+ font-family: Montserrat;
+ font-weight: 800;
+ font-size: 20px;
+ line-height: 24px;
+ letter-spacing: 0.08em; 
+ color: #111518;
  margin-top: 112px;
+ padding-bottom: 10px;
+ border-bottom: 1px solid #B9B9B9;
 }
 .teacher_education {
-padding-top: 27px;
+padding-top: 20px;
+font-family: Montserrat;
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 20px;
+color: #B9B9B9;
+}
+.teacher_certificate {
+  display: flex;
+  font-family: Montserrat;
+font-weight: 500;
+font-size: 12px;
+line-height: 20px;
+text-decoration-line: underline;
+color: #FF6B09;
+margin-top: 10px;
+margin-bottom: 50px;
 }
 }
+
 @media screen and (min-width: 1200px) {
+  .teacher_left_side {
+    width: 641px;
+  }
+  .teacher_area {
+    display: flex;
+    width: 1250px;
+    margin: auto;
+   }
   .teacher_title {
     font-size: 46px;
     margin-top: 130px;
@@ -123,10 +196,27 @@ padding-top: 27px;
     width: 530px;
     margin-right: 30px;
   }
+  .teacher_svg {
+    margin-right: 35px;  
+    width: 24px;
+    height: 20px; 
+    }
   .teacher_skills {
   font-size: 16px;
   line-height: 20px;
+  margin-top: 35px;
   }
+  .teacher_skills:last-child {
+    margin-bottom: 30px;
+  }
+  .teacher_before_line::before {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 25px;
+    height: 3px;
+    background-color:#FF6B09;
+   }
   .teacher_education {
   font-size: 18px;
   line-height: 28px;
@@ -136,6 +226,6 @@ padding-top: 27px;
   font-size: 18px;
   line-height: 28px;
   margin-top: 30px;
-  padding-bottom: 137px;
+  margin-bottom: 137px;
   }
 }
