Исправил стили, добавил вектору.

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -8,14 +8,14 @@
   padding-top: 50px;
   // background-color: #7a7a7a;
   background-image: url('../images/hero/vector-mobile.png');
-//   background: #ffffff;
-//   /* shsw */
+  //   background: #ffffff;
+  //   /* shsw */
 
-//   background-size: cover;
-//   box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
-//   background-repeat: no-repeat;
-//   background-position: center 0;
-// }
+  background-size: cover;
+  // box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
 
 .hero-offer {
   @media screen and (min-width: 320px) {
