--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -1,6 +1,6 @@
 .feedback {
   &.section {
-    padding: 50px 20px;
+    padding: 50px 0;
   }
   &-content {
     box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
@@ -85,19 +85,16 @@
   .arrow-left {
     position: absolute;
     top: 200px;
-    left: 0;
+    left: 25px;
   }
   .arrow-right {
     position: absolute;
     top: 200px;
-    right: 0;
+    right: 25px;
   }
   .feedback {
-    &.section {
-      padding: 50px 20px;
-    }
     & .container {
-      padding: 0 13px;
+      padding: 0 40px;
       position: relative;
     }
     &-content {
