--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -666,6 +666,9 @@ a {
   }
 }
 @media screen and (min-width: 768px) {
+  .warranty {
+    padding: 30px 50px 30px 79px;
+  }
   .warranty-list {
     width: 688px;
     pad: 30px 50px 30px 79px;
@@ -674,9 +677,21 @@ a {
   .warranty-item:not(:last-child) {
     margin-bottom: 20px;
   }
+  .warranty-fire-icon {
+    margin-right: 24px;
+  }
+  .warranty-icon:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .fire-line {
+    width: 35px;
+    top: 40px;
+    left: -10px;
+  }
 }
 .feedback.section {
-  padding: 50px 20px;
+  padding: 50px 0;
 }
 .feedback-content {
   -webkit-box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
@@ -793,20 +808,17 @@ a {
   .arrow-left {
     position: absolute;
     top: 200px;
-    left: 0;
+    left: 25px;
   }
 
   .arrow-right {
     position: absolute;
     top: 200px;
-    right: 0;
+    right: 25px;
   }
 
-  .feedback.section {
-    padding: 50px 20px;
-  }
   .feedback .container {
-    padding: 0 13px;
+    padding: 0 40px;
     position: relative;
   }
   .feedback-content {
