--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -40,16 +40,21 @@
 }
 
 @media screen and (min-width: 768px) {
+  .teacher-list-container-name {
+    width: 516px;
+    margin-left: 40px;
+  }
   .teacher-container {
     display: flex;
   }
-  .teacher-list-container {
-    padding-left: 40px;
-  }
 }
 @media screen and (min-width: 1344px) {
-  .teacher-list-container {
-    padding-left: 25px;
+  .teacher-list-container-name {
+    width: 642px;
+    margin-left: 25px;
+  }
+  .teacher-container {
+    display: flex;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -57,11 +62,7 @@
     margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 1344px) {
-  .image-teacher {
-    object-fit: cover;
-  }
-}
+
 .teacher-name {
   display: inline-block;
   font-family: Montserrat;
@@ -182,7 +183,6 @@
 .teacher-list-container-text:not(:last-child) {
   margin-bottom: 24px;
 }
-
 .teacher-list-container {
   margin-bottom: 10px;
 }
@@ -251,7 +251,7 @@
     position: relative;
   }
   .guarantee-list-item::before {
-    display: inline-block;
+    display: block;
     content: '';
     width: 14px;
     height: 20px;
