fixing hover and focus

--- a/src/sass/layout/_how-we-do-it.scss
+++ b/src/sass/layout/_how-we-do-it.scss
@@ -189,7 +189,7 @@
 
   transition: color 250ms var(--timing-function);
 
-  .features & {
+  .how-we-do-it & {
     @media screen and (min-width: 767px) and (max-width: 1343px) {
       padding-top: 10px;
       padding-bottom: 10px;
@@ -197,7 +197,7 @@
   }
 }
 
-.features__link:hover .dash,
-.features__link:focus .dash {
+.how-we-do-it__link:hover .dash,
+.how-we-do-it__link:focus .dash {
   color: var(--white-color);
 }
