Довавила первую часть Tablet

--- a/src/sass/_programm.scss
+++ b/src/sass/_programm.scss
@@ -34,11 +34,11 @@
     margin-bottom: 40px;
 }
 .program-item-subtitle {
-    @include font (700, 12px, 1.169, 0.08em);
+    @include font (700, 12px, 1.649, 0.08em);
     color: var(--txt-orange);
     padding-left: 52px;
-    padding-bottom: 9px;
-    padding-top: 9px;
+    padding-bottom: 6px;
+    padding-top: 7px;
     margin-bottom: 8px;
     position: relative;
 }
@@ -101,9 +101,10 @@
 .program-subtitle {
     @include font (800, 20px, 1.36, 0.03em);
     color: var(--txt-light);
-    width: 180px;
+    max-width: 180px;
     text-align: left;
     margin-bottom: 30px;
+  
 }
 .program-dignity-number {
     @include font (700, 14px, 1.649, 0.08em);
@@ -141,4 +142,146 @@
 .program-dignity {
     position: relative;
 }
+@media screen and (min-width: 768px) {
+    .program-section {
+        padding-top: 60px;
+        
+    }
+    .program-section .container {
+        padding-bottom: 200px;
+        
+    }
+    .program-title {
+        @include font (800, 26px, 1.3, 0.03em);
+        text-align: left;
+        margin-bottom: 60px;
+    }
+    .program-items {
+        // margin-bottom: 50px;
+    
+        
+    }
+    .program-item-semester {
+        display: flex;
+        
+        
+    }
+    .program-item-title {
+        
+        margin-bottom: 5px;
+        
+    }
+    .program-item {
+        padding-left: 70px;
+    }
+    .program-item:not(:last-child) {
+        margin-bottom: 30px;
+    }
+    .program-item-subtitle {
+        @include font (700, 12px, 1.667, 0.08em);
+        
+        // padding-left: 52px;
+       
+        padding-top: 6px;
+        margin-bottom: 5px;
+        padding-left: 20px;
+    }
+    
+    
+    .program-item-title::before {
+        
+    
+        margin-right: 38px;
+        
+    }
+    .program-items:not(:last-child)::before{
+        top: 100px;
+        left: 15%;
+        
+        height: 53%;
+        
+    
+    }
+    .program-item-subtitle::before {
+        left: 6px;
+        
+    }
+    .program-topics-item {
+        @include font (500, 12px, 1.667, 0.08em);
+        color: var(--txt-light);
+        opacity: 0.5;
+        padding-left: 0px;
+        
+    }
+    .program-item-grammar,
+    .program-item-vocabulary{
+        margin-bottom: 8px;
+        margin-left: 50px;
+        width: 176px;
+    }
+    // .program-item-grammar
+    //  {
+    
+    //     width: 176px;
+    // }
+    
+    .program-item-vocabulary {
+        margin-right: 50px;
 
+    }
+    .program-item-results {
+        padding-left: 50px;
+    }
+    .program-list-img {
+        top: 56%;
+        
+        
+    }
+    
+    .program-subtitle {
+        @include font (800, 26px, 1.3, 0.03em);
+        
+        min-width: 100%;
+        text-align: center;
+        
+        
+    }
+    .program {
+        margin-bottom: 189px;
+    }
+    // .program-dignity-number {
+    //     @include font (700, 14px, 1.649, 0.08em);
+    //     color: var(--txt-orange);
+    //     position: relative;
+    //     margin-left: 20px;
+    //     margin-bottom: 10px;
+    // }
+    .program-dignity-number::before {
+        content: "";
+        position: absolute;
+        width: 15px;
+        height: 2px;
+        bottom: 50%;
+        left: -12px;
+        transform: translate(-50%);
+        background-color: var(--b-accent-background);
+        
+    }
+    .program-dignity-text {
+        @include font (700, 14px, 1.429, 0.08em);
+        color: var(--txt-dark);
+    }
+    .program-dignity-items{
+      
+        position: absolute;
+        width: 688px;
+        // display: flex;
+        // flex-wrap: wrap;
+    }
+    .program-dignity-item:not(:last-child) {
+        margin-bottom: 20px;
+    }
+    .program-dignity {
+        position: relative;
+    }
+}
