--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -491,12 +491,12 @@ a {
 .program-item-subtitle {
   font-weight: 700;
   font-size: 12px;
-  line-height: 1.169;
+  line-height: 1.649;
   letter-spacing: 0.08em;
   color: var(--txt-orange);
   padding-left: 52px;
-  padding-bottom: 9px;
-  padding-top: 9px;
+  padding-bottom: 6px;
+  padding-top: 7px;
   margin-bottom: 8px;
   position: relative;
 }
@@ -569,7 +569,7 @@ a {
   line-height: 1.36;
   letter-spacing: 0.03em;
   color: var(--txt-light);
-  width: 180px;
+  max-width: 180px;
   text-align: left;
   margin-bottom: 30px;
 }
@@ -623,6 +623,120 @@ a {
 
 .program-dignity {
   position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .program-section {
+    padding-top: 60px;
+  }
+  .program-section .container {
+    padding-bottom: 200px;
+  }
+  .program-title {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    text-align: left;
+    margin-bottom: 60px;
+  }
+  .program-item-semester {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .program-item-title {
+    margin-bottom: 5px;
+  }
+  .program-item {
+    padding-left: 70px;
+  }
+  .program-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .program-item-subtitle {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.667;
+    letter-spacing: 0.08em;
+    padding-top: 6px;
+    margin-bottom: 5px;
+    padding-left: 20px;
+  }
+  .program-item-title::before {
+    margin-right: 38px;
+  }
+  .program-items:not(:last-child)::before {
+    top: 100px;
+    left: 15%;
+    height: 53%;
+  }
+  .program-item-subtitle::before {
+    left: 6px;
+  }
+  .program-topics-item {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.667;
+    letter-spacing: 0.08em;
+    color: var(--txt-light);
+    opacity: 0.5;
+    padding-left: 0px;
+  }
+  .program-item-grammar,
+  .program-item-vocabulary {
+    margin-bottom: 8px;
+    margin-left: 50px;
+    width: 176px;
+  }
+  .program-item-vocabulary {
+    margin-right: 50px;
+  }
+  .program-item-results {
+    padding-left: 50px;
+  }
+  .program-list-img {
+    top: 56%;
+  }
+  .program-subtitle {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    min-width: 100%;
+    text-align: center;
+  }
+  .program {
+    margin-bottom: 189px;
+  }
+  .program-dignity-number::before {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 2px;
+    bottom: 50%;
+    left: -12px;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+    background-color: var(--b-accent-background);
+  }
+  .program-dignity-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.429;
+    letter-spacing: 0.08em;
+    color: var(--txt-dark);
+  }
+  .program-dignity-items {
+    position: absolute;
+    width: 688px;
+  }
+  .program-dignity-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  .program-dignity {
+    position: relative;
+  }
 }
 
 .teacher-main-title {
