--- a/src/sass/_guarenty.scss
+++ b/src/sass/_guarenty.scss
@@ -62,10 +62,11 @@
 }
 @media screen and (min-width: 768px) {
   .warranty {
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px 50px 30px 79px;
     &-list {
       width: 688px;
-      pad: 30px 50px 30px 79px;
       margin: 0;
     }
     &-item:not(:last-child) {
@@ -85,4 +86,35 @@
   }
 }
 @media screen and (min-width: 1200px) {
+  .warranty {
+    max-width: 1314px;
+    padding: 44px 112px 50px 112px;
+    &-title {
+      @include font(800, 46px, 1.3, 0.03em);
+      margin-bottom: 56px;
+    }
+    &-list {
+      width: 1038px;
+      margin: 0;
+    }
+    &-item {
+      @include font(500, 20px, 1.4, 0.03em);
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+    }
+    &-fire-icon {
+      width: 22px;
+      height: 30px;
+      margin-right: 30px;
+    }
+    &-icon:not(:last-child) {
+      margin-bottom: 45px;
+    }
+  }
+  .fire-line {
+    width: 45px;
+    top: 52px;
+    left: -12px;
+  }
 }
