--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -667,11 +667,12 @@ a {
 }
 @media screen and (min-width: 768px) {
   .warranty {
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px 50px 30px 79px;
   }
   .warranty-list {
     width: 688px;
-    pad: 30px 50px 30px 79px;
     margin: 0;
   }
   .warranty-item:not(:last-child) {
@@ -688,6 +689,46 @@ a {
     width: 35px;
     top: 40px;
     left: -10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .warranty {
+    max-width: 1314px;
+    padding: 44px 112px 50px 112px;
+  }
+  .warranty-title {
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    margin-bottom: 56px;
+  }
+  .warranty-list {
+    width: 1038px;
+    margin: 0;
+  }
+  .warranty-item {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.4;
+    letter-spacing: 0.03em;
+  }
+  .warranty-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  .warranty-fire-icon {
+    width: 22px;
+    height: 30px;
+    margin-right: 30px;
+  }
+  .warranty-icon:not(:last-child) {
+    margin-bottom: 45px;
+  }
+
+  .fire-line {
+    width: 45px;
+    top: 52px;
+    left: -12px;
   }
 }
 .feedback.section {
