--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -18,7 +18,10 @@
             "
             media="(min-width: 320px)"
           />
-          <img src="./images/teacher/teacher-min.jpg" alt="" />
+          <img
+            src="./images/teacher/teacher-min.jpg"
+            alt="Фото преподаватиля"
+          />
         </picture>
       </div>
       <div class="teacher__right">
