--- a/src/sass/components/_teacher.scss
+++ b/src/sass/components/_teacher.scss
@@ -100,6 +100,12 @@
     &__name {
       margin-top: 60px;
     }
+    &__items::before {
+      content: '';
+      display: inline-table;
+      width: 17px;
+      height: 14px;
+    }
   }
   @media screen and (max-width: 1343px) {
     .teacher {
@@ -127,6 +133,8 @@
       padding-bottom: 10px;
       &::before {
         margin-right: 35px;
+        width: 24px;
+        height: 20px;
       }
     }
     &__text {
