Добавил стили на desktop и заменил изображения

--- a/src/sass/layout/_reg-form.scss
+++ b/src/sass/layout/_reg-form.scss
@@ -128,3 +128,55 @@
     margin-top: 31px;
   }
 }
+
+@media screen and (min-width: 1344px) {
+  .form-section {
+    padding: 100px 0 62px 0;
+    background-image: url('/images/reg-form/form-desktop.png');
+    background-size: 1680px 840px;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
+    screen and (min-resolution: 192dpi) and (min-width: 1344px),
+    screen and (min-resolution: 2dppx) and (min-width: 1344px) {
+    .form-section {
+      background-image: url('/images/reg-form/form-desktop@2x.png');
+    }
+  }
+
+  .form-title {
+    font-size: 46px;
+    line-height: 1.304;
+    margin-bottom: 50px;
+    width: 1090px;
+    margin-left: 100px;
+  }
+
+  .form-text {
+    font-size: 30px;
+    line-height: 1.233;
+    margin-bottom: 56px;
+  }
+
+  .form-input {
+    width: 478px;
+    height: 70px;
+    padding-left: 40px;
+    padding-top: 23px;
+    padding-bottom: 23px;
+  }
+
+  .form-input::placeholder {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .btn {
+    font-size: 14px;
+    line-height: 1.214;
+    min-width: 354px;
+    height: 70px;
+    padding: 27px 25px;
+    margin-top: 80px;
+  }
+}
